package com.diguage.didp.facade;

/**
 * Facade 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class Facade {
  public Object methodA() {
  }
  public Object methodB() {
  }
}
