package com.diguage.didp.facade;

/**
 * SubSystemOne 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class SubSystemOne {
  public Object methodOne() {
  }
}
