package com.diguage.didp.facade;

/**
 * SubSystemTwo 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class SubSystemTwo {
  public Object methodTwo() {
  }
}
